--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta name="description" content="React Application" />
+
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <!-- Bootstrap v4.5.2 -->
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <!-- Bootstrap RTL v4.3.1 -->
+    <link rel="stylesheet" href="/assets/css/bootstrap-rtl.min.css" />
+    <!-- Custom Style -->
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <!-- React Toastify Style -->
+    <link rel="stylesheet" href="/assets/css/ReactToastify.css" />
+    <!-- Swiper Slider Style -->
+    <link rel="stylesheet" href="/assets/css/swiper-bundle.css" />
+    <!-- Manifest -->
+    <link rel="manifest" href="/manifest.json" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Structure</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+  <body dir="rtl">
+    <noscript>Your browser does not support JavaScript!</noscript>
+    <div id="app"></div>
   </body>
+  <!-- JQuery -->
+  <script type="text/javascript" src="/assets/js/jquery.min.js"></script>
+  <!-- Bootstrap JavaScript -->
+  <script type="text/javascript" src="/assets/js/popper.min.js"></script>
+  <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+  <!-- Custom JavaScript -->
+  <script type="text/javascript" src="/assets/js/custom.js"></script>
 </html>
